Phase 2 updates
